# sm4_dynamic_qr

./: .gitignore  Cargo.toml  README.md
src/: main.rs
