[package]
name = "sm4_dynamic_qr"
version = "0.1.0"
edition = "2021"

[dependencies]
# Encryption (SM4 + CBC Mode + Padding)
sm4 = "0.5"
cbc = "0.1"
cipher = "0.4" 

# Data Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding and Utilities
base64 = "0.21"
hex = "0.4"
rand = "0.8"

# QR Code Generation
qrcode = "0.12"
image = "0.23" # Required to save the QR code as a PNG file